fixed z-index

--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -7,7 +7,7 @@
     position: fixed;
     align-items: center;
     background-color: $red;
-    z-index: 100;
+    z-index: 200;
 
     &__Links {
         width: 764px;
